# fada--ea-v2

./: .gitignore  FADA_V2_ANALISE_ESTRATEGICA.md  FADA_V2_VISAO_E_PLANO.md  README.md  docker-compose.yml  dvc.yaml  params.yaml
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/core/: config.py  geo.py
backend/app/data/: __init__.py
backend/app/domain/: __init__.py
backend/app/engine/: __init__.py  explainer.py  llm_client.py  orchestrator.py
backend/app/infra/: __init__.py  db.py  models.py  repositories.py
backend/app/schemas/: adaptive.py  agronomic.py  assistant.py  benchmark.py  calibration.py  capture.py  cost.py  credit.py  decision_card.py  decisions.py  farm.py  insights.py  market.py  multiseason.py  operations.py  planning.py  planting_date.py  regional_intelligence.py  weather.py  zarc.py
backend/app/services/: __init__.py  adaptive.py  agronomic.py  benchmark.py  calibration.py  capture.py  cost.py  data_health.py  decision_cards.py  decisions.py  farm.py  field_learning.py  insights.py  market.py  multiseason.py  operations.py  planning.py  planting_date.py  regional_fitted.py  regional_intelligence.py  season_planning.py  system.py  weather.py  zarc.py
backend/app/tests/: test_adaptive_endpoints.py  test_agronomic.py  test_assistant_knowledge.py  test_budget.py  test_calibration_endpoint.py  test_calibration_metrics.py  test_calibration_report.py  test_climate_indices.py  test_cost_benchmark.py  test_cost_engine.py  test_cost_profile.py  test_credit.py  test_crop_calendar.py  test_data_health.py  test_decision_card.py  test_decisions.py  test_decisions_endpoints.py  test_economic_recommendations.py  test_farm.py  test_features.py  test_field_learning.py  test_field_profile.py  test_insights.py  test_insights_endpoints.py  test_knowledge.py  test_llm_client.py  test_manejo_history.py  (+23 more)
backend/pipelines/: __init__.py  backtest_calibration.py  build_cost_benchmark.py  build_dataset.py  build_market_snapshot.py  build_planting_grid.py  build_soil_suggestions.py  build_zarc_windows.py  example.py  example_adaptive.py  example_insights.py  example_planting.py  region.py  train.py
(+225 files in other folders)
