[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fada-backend"
version = "0.1.0"
description = "FADA — Farm AI Decision Agent (backend)"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "numpy>=1.26",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
# Driver Postgres para produção (dev usa SQLite, sem driver extra).
pg = ["psycopg[binary]>=3.1"]
# Camada LLM opcional do orchestrator/explainer (ADR-0002/0010).
llm = ["anthropic>=0.39"]
# Ingestão de dados públicos oficiais via agrobr (CEPEA/CONAB/ZARC/INMET/IBGE…).
# SÓ usado nos pipelines offline (assíncrono, pandas/duckdb) — nunca no runtime.
data = ["agrobr>=1.1"]
# Dependências pesadas usadas SÓ no pipeline de treino/ingestão — não no runtime da API.
# O artefato do modelo é JSON inspecionável; a API faz inferência só com numpy.
ml = [
    "pandas>=2.2",
    "pyarrow>=15.0",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "mlflow>=2.12",
    "dvc>=3.50",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["app/tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"
